# asanadw

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
docs/: design.md  prd.md
src/: date_util.rs  error.rs  lib.rs
src/llm/: mod.rs
src/llm/agents/: mod.rs  period.rs  task.rs
src/metrics/: mod.rs  types.rs
src/query/: builder.rs  mod.rs  period.rs
src/search/: mod.rs
src/storage/: mod.rs  repository.rs  schema.rs
src/storage/migrations/: 001_initial.sql  002_add_permalink_urls.sql  003_add_enum_options.sql  004_add_event_sync_tokens.sql  005_add_assignment_history.sql  005_add_portfolio_portfolios.sql  006_fix_fts_triggers.sql  007_portfolio_fts.sql
src/sync/: api_helpers.rs  gap.rs  mod.rs  rate_limit.rs  syncer.rs
src/url/: mod.rs
