[package]
name = "asanadw"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Sync Asana data to a local SQLite data warehouse"

[[bin]]
name = "asanadw"
path = "src/bin/asanadw.rs"

[dependencies]
asanaclient = { path = "../asanaclient/asanaclient" }
mixtape-core = { path = "../mixtape/mixtape-core", features = ["anthropic", "bedrock"] }
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
rusqlite = "0.37"
rusqlite_migration = "2.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
url = "2.5"
regex = "1.12"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
