[package]
name = "asanadw"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/adlio/asanadw"
documentation = "https://docs.rs/asanadw"
description = "Sync Asana data to a local SQLite data warehouse"
readme = "README.md"
keywords = ["asana", "data-warehouse", "sqlite", "sync", "metrics"]
categories = ["command-line-utilities", "database"]
exclude = ["docs/", "tmp/", ".cargo-husky/", ".claude/", ".github/", "AGENTS.md"]

[[bin]]
name = "asanadw"
path = "src/bin/asanadw.rs"

[dependencies]
asanaclient = "0.1.1"
mixtape-core = { version = "0.2", features = ["anthropic", "bedrock"] }
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
rusqlite = "0.37"
rusqlite_migration = "2.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
url = "2.5"
regex = "1.12"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
